--- a/P010700.opf/meta.yml
+++ b/P010700.opf/meta.yml
@@ -1,7 +1,7 @@
-id: opecha:P010700
+id: P010700
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W30490
   title: འཇང་གླིང་གཡུལ་འགྱེད།
-  volume: ''
   author: ''
+  volumes: {}
