volumes of meta updated

--- a/P010700.opf/meta.yml
+++ b/P010700.opf/meta.yml
@@ -4,4 +4,9 @@ source_metadata:
   id: bdr:W30490
   title: འཇང་གླིང་གཡུལ་འགྱེད།
   author: ''
-  volumes: {}
+  volumes:
+    5169a49d6ada4199a9df3d3cffea055d:
+      image_group_id: I1KG17263
+      title: ''
+      volume_number: 1
+      total_pages: 356
