--- a/P010700.opf/layers/v001/Pagination.yml
+++ b/P010700.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: c455b054412a4befb7cc21fa6f83c9cf
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   0af9de3e2e924ba8ae96a5dd3cea1648:
